o2 download script, needs that sleep removed.

--- a/pers.env
+++ b/pers.env
@@ -4,3 +4,10 @@ export nsupdate_user="HOSTNAME:HOSTSECRET"
 
 # freedns / afraid.org
 declare -a HOSTKEYS=('Q.....2' 'K.....5')
+
+
+export bid="username"
+export bpw="password"
+
+export oid="cellnumber"
+export opw="password"
